Added site description and keywords. Added img alt attributes.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description" content="Faulty Olive is an indie game and mobile application development team form Lisbon, Portugal.">
+    <meta name="keywords" content="Faulty,Olive,Mobile,Game,Application,Poltergram,Water,Ski,Christmas,Late,Run">
     <title>Faulty Olive</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
@@ -11,11 +13,11 @@
   <body>
 
   <div id="header">
-    <img id="logo" src="img/logo.svg"/>
+    <img id="logo" src="img/logo.svg" alt="Faulty Olive"/>
     <div id="menu">
-      <a href="#santa" title="Christmas Late Run"><img class="menu-item" src="img/santa-icon.png"/></a>
-      <a href="#waterski" title="Water Ski"><img class="menu-item" src="img/waterski-icon.png"/></a>
-      <a href="#poltergram" title="Poltergram"><img class="menu-item" src="img/poltergram-icon.png"/></a>
+      <a href="#santa" title="Christmas Late Run"><img class="menu-item" src="img/santa-icon.png" alt="Christmas Late Run"/></a>
+      <a href="#waterski" title="Water Ski"><img class="menu-item" src="img/waterski-icon.png" alt="Water Ski"/></a>
+      <a href="#poltergram" title="Poltergram"><img class="menu-item" src="img/poltergram-icon.png" alt="Poltergram"/></a>
     </div>
   </div>
 
@@ -32,15 +34,15 @@
       <meta itemprop="genre" content="casual">
       <meta itemprop="contentRating" content="PEGI 3">
 
-      <img itemprop="thumbnailUrl" class="section-icon" src="img/santa-icon.png">
+      <img itemprop="thumbnailUrl" class="section-icon" src="img/santa-icon.png" alt="Christmas Late Run">
 
-      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png" alt="Back to top"></a>
 
       <div itemprop="name" class="section-title">Christmas Late Run</div>
 
       <div itemprop="gameLocation" class="section-links">
         <a itemprop="gamePlatform" href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
-          <img class="section-badge" src="img/google-play-badge.png">
+          <img class="section-badge" src="img/google-play-badge.png" alt="Get Christmas Late Run on the Play Store">
         </a>
       </div>
 
@@ -58,7 +60,7 @@
       </div>
 
       <div class="section-media">
-        <img itemprop="screenshot" class="section-image" src="img/santa-gif.gif">
+        <img itemprop="screenshot" class="section-image" src="img/santa-gif.gif" alt="Christmas Late Run Screenshot">
         <iframe itemprop="trailer" class="section-video" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
       </div>
 
@@ -75,15 +77,15 @@
       <meta itemprop="genre" content="casual">
       <meta itemprop="contentRating" content="PEGI 3">
 
-      <img itemprop="thumbnailUrl" class="section-icon" src="img/waterski-icon.png">
+      <img itemprop="thumbnailUrl" class="section-icon" src="img/waterski-icon.png" alt="Water Ski">
 
-      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png" alt="Back to top"></a>
 
       <div itemprop="name" class="section-title">Water Ski</div>
 
       <div itemprop="gameLocation" class="section-links">
         <a itemprop="gamePlatform" href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
-          <img class="section-badge" src="img/google-play-badge.png">
+          <img class="section-badge" src="img/google-play-badge.png" alt="Get Water Ski on the Play Store">
         </a>
       </div>
 
@@ -102,7 +104,7 @@
       </div>
 
       <div class="section-media">
-        <img itemprop="screenshot" class="section-image" src="img/waterski-gif.gif">
+        <img itemprop="screenshot" class="section-image" src="img/waterski-gif.gif" alt="Water Ski Screenshot">
         <iframe itemprop="trailer" class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
       </div>
 
@@ -117,15 +119,15 @@
       <meta itemprop="copyrightYear" content="2014">
       <meta itemprop="contentRating" content="PEGI 12">
 
-      <img itemprop="thumbnailUrl" class="section-icon" src="img/poltergram-icon.png">
+      <img itemprop="thumbnailUrl" class="section-icon" src="img/poltergram-icon.png" alt="Poltergram">
 
-      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png" alt="Back to top"></a>
 
       <div class="section-title">Poltergram</div>
 
       <div class="section-links">
         <a itemprop="downloadUrl" href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
-          <img class="section-badge" src="img/google-play-badge.png">
+          <img class="section-badge" src="img/google-play-badge.png" alt="Get Poltergram on the Play Store">
         </a>
       </div>
 
@@ -154,9 +156,9 @@
       </div>
 
       <div class="section-media">
-        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot1.jpg">
-        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot2.jpg">
-        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot3.jpg">
+        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot1.jpg" alt="Poltergram Screenshot">
+        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot2.jpg" alt="Poltergram Screenshot">
+        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot3.jpg" alt="Poltergram Screenshot">
       </div>
 
     </div>
