Added schema to Faulty Olive.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   </head>
   <body>
 
-  <div id="header">
+  <div id="header" itemscope itemtype="https://schema.org/Organization">
+    <meta itemprop="email" content="contact@faultyolive.com">
+    <meta itemprop="logo" content="img/logo.svg">
+    <meta itemprop="description" content="Faulty Olive is an indie game and mobile application development team form Lisbon, Portugal.">
+    <meta itemprop="name" content="Faulty Olive">
     <img id="logo" src="img/logo.svg" alt="Faulty Olive"/>
     <div id="menu">
       <a href="#santa" title="Christmas Late Run"><img class="menu-item" src="img/santa-icon.png" alt="Christmas Late Run"/></a>
@@ -33,6 +37,7 @@
       <meta itemprop="copyrightYear" content="2015">
       <meta itemprop="genre" content="casual">
       <meta itemprop="contentRating" content="PEGI 3">
+      <meta itemprop="gamePlatform" content="Android">
 
       <img itemprop="thumbnailUrl" class="section-icon" src="img/santa-icon.png" alt="Christmas Late Run">
 
@@ -40,8 +45,8 @@
 
       <div itemprop="name" class="section-title">Christmas Late Run</div>
 
-      <div itemprop="gameLocation" class="section-links">
-        <a itemprop="gamePlatform" href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
+      <div class="section-links">
+        <a itemprop="gameLocation" href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
           <img class="section-badge" src="img/google-play-badge.png" alt="Get Christmas Late Run on the Play Store">
         </a>
       </div>
@@ -76,6 +81,7 @@
       <meta itemprop="copyrightYear" content="2015">
       <meta itemprop="genre" content="casual">
       <meta itemprop="contentRating" content="PEGI 3">
+      <meta itemprop="gamePlatform" content="Android">
 
       <img itemprop="thumbnailUrl" class="section-icon" src="img/waterski-icon.png" alt="Water Ski">
 
@@ -83,8 +89,8 @@
 
       <div itemprop="name" class="section-title">Water Ski</div>
 
-      <div itemprop="gameLocation" class="section-links">
-        <a itemprop="gamePlatform" href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
+      <div class="section-links">
+        <a itemprop="gameLocation" href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
           <img class="section-badge" src="img/google-play-badge.png" alt="Get Water Ski on the Play Store">
         </a>
       </div>
