Additional schema info.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta itemprop="logo" content="img/logo.svg">
     <meta itemprop="description" content="Faulty Olive is an indie game and mobile application development team form Lisbon, Portugal.">
     <meta itemprop="name" content="Faulty Olive">
+    <meta itemprop="location" content="Lisbon, Portugal">
+    <meta itemprop="url" content="http://www.faultyolive.com/">
     <img id="logo" src="img/logo.svg" alt="Faulty Olive"/>
     <div id="menu">
       <a href="#santa" title="Christmas Late Run"><img class="menu-item" src="img/santa-icon.png" alt="Christmas Late Run"/></a>
@@ -38,6 +40,7 @@
       <meta itemprop="genre" content="casual">
       <meta itemprop="contentRating" content="PEGI 3">
       <meta itemprop="gamePlatform" content="Android">
+      <meta itemprop="isFamilyFriendly" content="true">
 
       <img itemprop="thumbnailUrl" class="section-icon" src="img/santa-icon.png" alt="Christmas Late Run">
 
@@ -82,6 +85,7 @@
       <meta itemprop="genre" content="casual">
       <meta itemprop="contentRating" content="PEGI 3">
       <meta itemprop="gamePlatform" content="Android">
+      <meta itemprop="isFamilyFriendly" content="true">
 
       <img itemprop="thumbnailUrl" class="section-icon" src="img/waterski-icon.png" alt="Water Ski">
 
