--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
   <div id="footer">
     <div><a href="mailto:contact@faultyolive.com">contact@faultyolive.com</a></div>
     <div>2015 - All rights reserved</div>
+    <img class="analytics" src="https://ga-beacon.appspot.com/UA-70973138-3/faultyolive.github.io/site" alt="Google Analytics">
   </div>
 
   </body>
